# wasmtime4j

./: .dockerignore  .gitignore  .markdownlint.json  ADVANCED_EXECUTION_CONTROL_IMPLEMENTATION.md  ADVANCED_JIT_COMPILATION_SUMMARY.md  ADVANCED_SIMD_IMPLEMENTATION_SUMMARY.md  ASYNC_IMPLEMENTATION_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_RECOMMENDATIONS.md  COMPONENT_MODEL_STATUS.md  COMPREHENSIVE_MONITORING_FRAMEWORK_SUMMARY.md  COMPREHENSIVE_PERFORMANCE_FRAMEWORK_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXCEPTION_HANDLING_IMPLEMENTATION_SUMMARY.md  GC_IMPLEMENTATION_STATUS.md  HANDOFF_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  KNOWN_ISSUES.md  LICENSE  MARSHALLING-LEVER-FINDINGS.md  PANAMA_IMPLEMENTATION_PARITY_REPORT.md  PANAMA_STATUS.md  PERFORMANCE_VALIDATION_REPORT.md  PRODUCTION_VALIDATION_CERTIFICATION_REPORT.md  README.md  README_STORE_LINKER_IMPL.md  REFTYPE_FIX_ANALYSIS.md  TASK-311-IMPLEMENTATION-REPORT.md  TEST_COVERAGE_PLAN.md  TEST_COVERAGE_PLAN_V4.md  TEST_COVERAGE_PLAN_V5.md  TEST_SUITE_POPULATION_SUMMARY.md  UDP_IMPLEMENTATION_ROADMAP.md  WASI_API_COVERAGE.md  WASI_IMPLEMENTATION_PLAN.md  WASI_NEXT_STEPS.md  (+21 more)
wasmtime4j-native/: Cargo.toml  GC_API_MIGRATION_GUIDE.md  GC_IMPLEMENTATION_STATUS.md  MEMORY_UTILITIES_DEMO.md  README.md  WASMTIME_GLOBAL_CODE_ISSUE_REPORT.md  build.rs  mutants.toml  pom.xml
wasmtime4j-native/.claude/prds/: wasmtime-production-readiness.md
wasmtime4j-native/.cross-compilation/: README.md  build-config.env  build-info.json  dev-env.sh  environment.sh  manage-cache.sh  targets.list
wasmtime4j-native/examples/: fs_denial_hook.rs
wasmtime4j-native/fuzz/: Cargo.toml  generate_corpus.sh
wasmtime4j-native/fuzz/fuzz_targets/: error_message.rs  func_call.rs  jni_callback.rs  memory_access.rs  module_parse.rs  module_serialize.rs  wit_deserialize.rs  wit_serialize.rs
wasmtime4j-native/jni-headers/: ai_tegmentum_wasmtime4j_jni_JniAsyncRuntime.h  ai_tegmentum_wasmtime4j_jni_JniCaller.h  ai_tegmentum_wasmtime4j_jni_JniCodeBuilder.h  ai_tegmentum_wasmtime4j_jni_JniComponent.h  ai_tegmentum_wasmtime4j_jni_JniComponentEngine.h  ai_tegmentum_wasmtime4j_jni_JniComponentImpl.h  ai_tegmentum_wasmtime4j_jni_JniComponentInstancePre.h  ai_tegmentum_wasmtime4j_jni_JniComponentLinker.h  ai_tegmentum_wasmtime4j_jni_JniDebugger.h  ai_tegmentum_wasmtime4j_jni_JniEngine.h  ai_tegmentum_wasmtime4j_jni_JniExnRef.h  ai_tegmentum_wasmtime4j_jni_JniExperimentalFeatures.h  ai_tegmentum_wasmtime4j_jni_JniFunction.h  ai_tegmentum_wasmtime4j_jni_JniFunctionReference.h  ai_tegmentum_wasmtime4j_jni_JniGcRuntime.h  ai_tegmentum_wasmtime4j_jni_JniGlobal.h  ai_tegmentum_wasmtime4j_jni_JniGuestProfiler.h  ai_tegmentum_wasmtime4j_jni_JniHostFunction.h  ai_tegmentum_wasmtime4j_jni_JniInstance.h  ai_tegmentum_wasmtime4j_jni_JniInstancePre.h  ai_tegmentum_wasmtime4j_jni_JniLinker.h  ai_tegmentum_wasmtime4j_jni_JniMemory.h  ai_tegmentum_wasmtime4j_jni_JniModule.h  ai_tegmentum_wasmtime4j_jni_JniModuleCache.h  ai_tegmentum_wasmtime4j_jni_JniProfiler.h  ai_tegmentum_wasmtime4j_jni_JniSerializer.h  ai_tegmentum_wasmtime4j_jni_JniStore.h  ai_tegmentum_wasmtime4j_jni_JniTable.h  ai_tegmentum_wasmtime4j_jni_JniTag.h  ai_tegmentum_wasmtime4j_jni_JniTypedFunc.h  ai_tegmentum_wasmtime4j_jni_JniWasiContextImpl.h  ai_tegmentum_wasmtime4j_jni_JniWasmRuntime.h  ai_tegmentum_wasmtime4j_jni_JniWasmThread.h  ai_tegmentum_wasmtime4j_jni_JniWasmThreadLocalStorage.h  ai_tegmentum_wasmtime4j_jni_JniWastRunner.h  ai_tegmentum_wasmtime4j_jni_JniWeakEngine.h  ai_tegmentum_wasmtime4j_jni_JniWitInterfaceEvolution.h  ai_tegmentum_wasmtime4j_jni_JniWitValueMarshaller.h  ai_tegmentum_wasmtime4j_jni_debug_JniDebugSession.h  ai_tegmentum_wasmtime4j_jni_execution_JniResourceLimiter.h  (+47 more)
wasmtime4j-native/scripts/: build-config.sh  build-config.sh.bak  build-native.bat  build-native.sh  run-tests-batched.sh  setup-cross-compilation.bat  setup-cross-compilation.sh  setup-cross-compilation.sh.bak
wasmtime4j-native/src/: access_control.rs  adaptive_scaling.rs  advanced_access_control.rs  advanced_experimental.rs  advanced_memory.rs  advanced_networking.rs  aot_compilation.rs  async_imports.rs  async_ops.rs  async_runtime.rs  audit.rs  bulk_operations.rs  call_hooks.rs  caller.rs  code_builder.rs  component.rs  component_composition.rs  component_core.rs  component_orchestration.rs  component_resources.rs  config_cranelift.rs  coredump.rs  cpu_cache_management.rs  cpu_microarchitecture_detection.rs  crypto_validation.rs  data_segment.rs  deadlock_prevention.rs  debug.rs  debug_server.rs  distributed_components.rs  element_segment.rs  element_segment_parser.rs  engine.rs  engine_config.rs  epoch_callback.rs  error.rs  error_recovery.rs  exception_handling.rs  exceptions.rs  execution_control.rs  (+150 more)
wasmtime4j-native/src/component/: linker.rs  mod.rs  observed_fs.rs  resources.rs  tests.rs  wit.rs
wasmtime4j-native/src/engine/: builder.rs  core.rs  ffi.rs  mod.rs  pool.rs  tests.rs
wasmtime4j-native/src/error/: ffi_utils.rs  jni_utils.rs  mod.rs  tests.rs
wasmtime4j-native/src/jni/: caller.rs  code_builder.rs  component.rs  component_linker.rs  coredump.rs  debugger.rs  engine.rs  function.rs  functionref.rs  global.rs  guest_profiler.rs  hostfunc.rs  instance.rs  linker.rs  memory.rs  mod.rs  module.rs  native_method_bindings.rs  resource_limiter.rs  runtime.rs  serializer.rs  simd.rs  store.rs  table.rs  wasi.rs  wasi_nn.rs
wasmtime4j-native/src/memory/: core.rs  ffi.rs  mod.rs  platform.rs  tests.rs  types.rs
wasmtime4j-native/src/panama/: caller.rs  code_builder.rs  component_enhanced.rs  coredump.rs  engine.rs  exception_handling.rs  experimental_features.rs  function.rs  gc_refs.rs  global.rs  instance.rs  instance_pre.rs  linker.rs  memory.rs  mod.rs  module.rs  pooling_allocator.rs  store.rs  table.rs  trap.rs  typed_instance_calls.rs  utility.rs  wasi_context.rs  wasi_http.rs  wasi_nn.rs
wasmtime4j-native/tests/: integration_tests.rs
wasmtime4j-native/tests/common/: assertions.rs  fixtures.rs  mod.rs
wasmtime4j-native/tests/integration/: mod.rs  (+4 more)
(+6105 files in other folders)
