[workspace]
members = ["wasmtime4j-native"]
exclude = ["wasmtime4j-native/fuzz"]
resolver = "2"

# Centralized dependency versions for all workspace members
# Update wasmtime version here - it propagates to all crates
[workspace.dependencies]
# Wasmtime WebAssembly runtime - single source of truth for version
wasmtime = { version = "42.0.1", features = ["component-model", "component-model-async", "async", "call-hook", "coredump", "gc", "cache", "debug", "incremental-cache", "wave"] }
wasmtime-wasi = { version = "42.0.1" }
wasmtime-wasi-http = { version = "42.0.1" }
wasmtime-wasi-nn = { version = "42.0.1" }
wasmtime-wasi-config = { version = "42.0.1" }
wasmtime-wast = { version = "42.0.1", features = ["component-model", "component-model-async"] }

# WebAssembly text format parser
wat = "1.0"
wast = "244.0.0"
wasmparser = "0.244"

# JNI support for Java 8-22 compatibility
jni = "0.21.1"

# Async runtime for WASI and other async operations
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1.89"

# Serialization support for complex data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Memory management utilities
once_cell = "1.19"

# Advanced threading and lock-free data structures
parking_lot = "0.12"

# Encoding
base64 = "0.22"

# Unix-specific
libc = "0.2"

# RNG core traits (for custom WASI RNG implementations)
rand_core = "0.6"

# Dev dependencies
tempfile = "3.8"

[profile.release]
# Optimize for size and speed in release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"  # Required for catch_unwind to work in JNI

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
