[package]
name = "wasmtime4j-native"
version = "47.0.2-1.5.1"
edition = "2021"
description = "Native Rust library providing unified Wasmtime bindings for both JNI and Panama FFI"
license = "Apache-2.0"
repository = "https://github.com/tegmentum/wasmtime4j"
readme = "README.md"

# Optimize for native library use
[lib]
name = "wasmtime4j"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Wasmtime WebAssembly runtime - versions managed in workspace root
wasmtime.workspace = true
wasmtime-wasi = { workspace = true, optional = true }
wasmtime-wasi-http = { workspace = true, optional = true }
# `onnx-download` (below) activates `ort/download-binaries`, so on
# `-P wasi-nn` builds ort-sys fetches a self-contained ONNX Runtime
# bundle from pyke.io (once, then cached) and STATIC-links
# libonnxruntime.a plus its bundled protobuf-lite / absl / re2 /
# nsync / cpuinfo into libwasmtime4j.{so,dylib,dll}. That avoids the
# host-protobuf ABI collision that blocked JVM engines: Homebrew's
# libonnxruntime.1.25.0.dylib hard-references
# libprotobuf-lite.34.1.0.dylib, but current brew protobuf is 35.x, so
# any dlopen of the dynamically-linked wasi-nn native fails on plain
# JVM hosts (Fuseki, Jetty, servlet containers) whose launch scripts
# the operator can't patch with DYLD_FALLBACK_LIBRARY_PATH.
#
# IMPORTANT: the `-P wasi-nn` Maven profile also sets
# LIBONNXRUNTIME_NO_PKG_CONFIG=1 in cargo's env — without it, ort-sys'
# build.rs runs pkg_config::probe("libonnxruntime") BEFORE the
# download-binaries path and, on hosts with brew's libonnxruntime.pc
# discoverable, emits cargo:rustc-link-lib=onnxruntime, re-introducing
# the dynamic linkage the download-binaries feature exists to avoid.
# See wasmtime4j-native/pom.xml under the wasi-nn profile.
wasmtime-wasi-nn = { workspace = true, optional = true, features = ["onnx-download"] }
# ort-sys direct dep exists solely so the workspace-root `=2.0.0-rc.10`
# pin propagates into the resolved graph. wasmtime-wasi-nn pulls ort-sys
# transitively with a loose spec, so without a direct dep here Cargo
# picks the highest matching version at fresh resolve time (rc.12 on CI
# without a checked-in Cargo.lock) — and rc.12 added a hard TLS-feature
# gate on `download-binaries` that fails the build. Never referenced in
# code; only present to influence version selection under wasi-nn.
ort-sys = { workspace = true, optional = true }
wasmtime-wasi-config = { workspace = true, optional = true }
wasmtime-wast.workspace = true

# WebAssembly text format parser
wat.workspace = true
wast.workspace = true
wasmparser.workspace = true

# JNI support for Java 8-22 compatibility
jni = { workspace = true, optional = true }

# Async runtime for WASI and other async operations
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization support for complex data structures
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

# Advanced threading and lock-free data structures
parking_lot.workspace = true

# RNG core traits for custom WASI RNG implementations
rand_core = { workspace = true, optional = true }

# Unix-specific dependencies for process operations
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]

[build-dependencies]

[dev-dependencies]
# Testing dependencies
tempfile.workspace = true

[features]
default = ["jni-bindings", "panama-ffi", "component-model", "wasi", "wasi-http", "wasi-config", "async", "profiling", "rr"]

# JNI bindings for Java 8-22
jni-bindings = ["jni"]

# Panama Foreign Function Interface for Java 23+
panama-ffi = []

# WASI support (using wasmtime-wasi crate)
wasi = ["wasmtime-wasi", "rand_core"]

# WASI HTTP support (using wasmtime-wasi-http crate)
wasi-http = ["wasmtime-wasi-http", "wasi"]

# WASI P3 support (experimental, unstable — requires wasi + wasi-http)
wasi-p3 = ["wasi", "wasi-http"]

# WASI-NN support (neural network inference - Tier 3 experimental)
wasi-nn = ["wasmtime-wasi-nn", "wasi", "dep:ort-sys"]

# WASI-Config support (configuration variables - requires wasmtime 39+)
wasi-config = ["wasmtime-wasi-config", "wasi"]

# Component model support (WASI2)
component-model = [
    "wasmtime/component-model",
    "wasmtime/component-model-async"
]

# Async support
async = ["wasmtime/async"]

# Profiling support
profiling = ["wasmtime/profiling"]

# Record/replay support for deterministic debugging
rr = ["wasmtime/rr"]

# WebAssembly memory checker (wmemcheck) for debugging
# Enables runtime detection of memory errors in wasm programs
# Note: This adds overhead and is primarily for debugging
wmemcheck = ["wasmtime/wmemcheck"]

# Profile settings are defined in workspace root Cargo.toml

# Platform-specific configurations
[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies if needed

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies if needed

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies if needed

# Cross-compilation targets
[[bin]]
name = "build-info"
path = "src/bin/build-info.rs"
required-features = []

# Note: [patch.crates-io] is defined in workspace root Cargo.toml
