[package]
name = "wasmtime4j-native-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }

[dependencies.wasmtime4j-native]
path = ".."
features = ["jni-bindings", "panama-ffi", "wasi"]

# Additional dependencies for fuzzing
[dependencies.wasmtime]
version = "43.0.0"
features = ["component-model"]

[dependencies.anyhow]
version = "1.0"

[dependencies.wat]
version = "1.0"

# Module parsing fuzz target
[[bin]]
name = "module_parse"
path = "fuzz_targets/module_parse.rs"
test = false
doc = false
bench = false

# WIT value deserialization fuzz target
[[bin]]
name = "wit_deserialize"
path = "fuzz_targets/wit_deserialize.rs"
test = false
doc = false
bench = false

# Function call fuzz target
[[bin]]
name = "func_call"
path = "fuzz_targets/func_call.rs"
test = false
doc = false
bench = false

# Memory access fuzz target
[[bin]]
name = "memory_access"
path = "fuzz_targets/memory_access.rs"
test = false
doc = false
bench = false

# Module serialization round-trip fuzz target
[[bin]]
name = "module_serialize"
path = "fuzz_targets/module_serialize.rs"
test = false
doc = false
bench = false

# WIT value serialization round-trip fuzz target
[[bin]]
name = "wit_serialize"
path = "fuzz_targets/wit_serialize.rs"
test = false
doc = false
bench = false

# Error message formatting fuzz target
[[bin]]
name = "error_message"
path = "fuzz_targets/error_message.rs"
test = false
doc = false
bench = false

# Host function callback dispatch fuzz target
[[bin]]
name = "jni_callback"
path = "fuzz_targets/jni_callback.rs"
test = false
doc = false
bench = false
